--- a/projectMarvel/loginPageCss.css
+++ b/projectMarvel/loginPageCss.css
@@ -3,13 +3,57 @@ body {
     padding: 0;
     background-color: black;
 }
-
-.imageRaoate {
-    width: 200px;
-    height: 70%;
-    position: absolute;
-    border-radius: 100px;
+input{
+    font-family: sans-serif;
+    padding: 20px 10px;
+    border: 3px solid white;
+    color: white;
+    font-size: 28px;
+    text-indent: 15px;
+    border-radius: 10px;
+    outline: none;
+    background: none;
+    border: grey;
+    border-width: 1px;
+    letter-spacing: 3px;
+    transition: .3s;
 }
+pre
+{
+    color: wheat;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    font-size: 20px;
+    left:15%
+}
+.marvelImages
+{
+width: 500px;
+height: 900px;
+position: absolute;
+    right: 60%; 
+    top: -50%;
+
+}
+.forgotLink
+{
+    text-decoration: none;
+    color: white;
+    font-family: sans-serif;
+}
+input:focus {
+    padding: 25px 25px;
+    box-shadow: 0 0 15px rgb(225, 9, 245),
+                0 0 75px rgb(225, 9, 245);
+    border: 1px solid rgb(225, 9, 245);
+}
+
+input::placeholder {
+    color: grey;
+}
+
+
 .titleDisplay
 {
 display: flex;
@@ -20,12 +64,12 @@ display: flex;
  position: relative;
  left:25%;
     letter-spacing: 10px;
-  
-
 }
 .logoFixer
 {
-    width: 50px;
+    width: 100px;
+    height: 150px;
+  
 }
 .block {
     display: flex;
@@ -38,10 +82,10 @@ display: flex;
     background: linear-gradient(0deg, black, rgb(43, 43, 43));
 }
 .firstBlock {
-    background:linear-gradient(0deg,skyblue,white);
+    background:linear-gradient(0deg,grey,black);
     border-radius: 30px;
     box-sizing: border-box;
-    box-shadow: 1px 2px 25px orange;
+    box-shadow: 1px 2px 25px rgb(0, 219, 248);
     width: 45%;
     height: 80%;
     margin-left: 30px;
@@ -49,13 +93,13 @@ display: flex;
 }
 
 .secondBlock {
-    background:linear-gradient(0deg,orange,white);
+    background:linear-gradient(0deg,grey,black);
     border-radius: 30px;
     width: 45%;
     height: 80%;
     margin-right: 30px;
     box-sizing: border-box;
-    box-shadow: 1px 2px 25px skyblue;
+    box-shadow: 1px 2px 25px rgb(221, 84, 130);
 }
 .glow::before,
 .glow::after {
